# rag-evaluation-harness

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/routes/: retrieve.py
app/chunking/: recursive.py  semantic.py
app/core/: config.py  database.py
app/indexing/: postgres.py  qdrant.py
app/ingestion/: clean.py  normalize.py
app/models/: chunks.py
app/retrieval/: pipeline.py  reranker.py  retrieve.py  retriever.py
chunking/: recursive.py  semantic.py
data/evals/: golden_answers.jsonl  metadata.yaml  questions.jsonl
db/: load_chunks.py  schema.sql
ingestion/: clean_docs.py  normalize_docs.py
rag_evaluation_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: pipeline.py
