[project]
name = "rag-evaluation-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.44.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.18.0",
    "sqlmodel>=0.0.39",
    "pydantic-settings>=2.14.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "accelerate>=1.14.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
